flux/infrastructure/kyverno-policies/base/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      Requires all Deployments, StatefulSets, and DaemonSets to have
      the label 'app.kubernetes.io/managed-by' equal to 'flux'.
spec:
  background: true
  rules:
    - name: check-for-managed-by
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
      validate:
        message: "Label 'app.kubernetes.io/managed-by=flux' is required."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/managed-by: flux
